@@ -1,3 +1,9 @@
+2011-12-30  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	* doc/xml/manual/extensions.xml: Improve markup and note that some
+	extensions are included in C++11.
+	* doc/xml/manual/concurrency_extensions.xml: Likewise.
+
 2011-12-30  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR libstdc++/51711
